2009-11-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Implement a StyleQueue
        https://bugs.webkit.org/show_bug.cgi?id=31537

        The first iteration of the style queue only produces output locally.
        There is also a limit of 10 patches because it's not that useful to
        iterate through the entire review queue at this point.  We can remove
        the limit later.

        * Scripts/bugzilla-tool:
        * Scripts/modules/bugzilla.py:

2009-11-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Unit test WorkQueue
        https://bugs.webkit.org/show_bug.cgi?id=31531

        Adds basic unit testing for WorkQueue.  Just runs through one cycle.

        * Scripts/bugzilla-tool:
        * Scripts/modules/statusbot.py:
        * Scripts/modules/workqueue.py:
        * Scripts/modules/workqueue_unittest.py: Added.
        * Scripts/run-webkit-unittests:

2009-11-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool land-diff should know how to parse bug ids out of ChangeLogs
        https://bugs.webkit.org/show_bug.cgi?id=31530

        * Scripts/bugzilla-tool:

2009-11-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool needs apply-attachment
        https://bugs.webkit.org/show_bug.cgi?id=31528

        * Scripts/bugzilla-tool:
         - Add ApplyAttachment command.
         - Abstract applying code into WebKitApplyingScripts.
         - Rename setup_for_landing to prepare_clean_working_directory and make local_commit checking optional.
        * Scripts/modules/bugzilla.py:
         - Add fetch_attachment and bug_id_for_attachment_id.
        * Scripts/modules/bugzilla_unittest.py:
         - Add test for new parsing.
         - Fix previous parsing test which broke with Adam's check-style patch (bug 31515).

2009-11-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.
