@@ -2,6 +2,14 @@
 
         Reviewed by Eric Seidel.
 
+        Fix silly copy-and-paste code.  I am a terrible coder.
+
+        * Scripts/modules/bugzilla.py:
+
+2009-11-16  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         Implement a StyleQueue
         https://bugs.webkit.org/show_bug.cgi?id=31537
 
